Attempt to fix signup button on mobile devices

--- a/sass/custom.sass
+++ b/sass/custom.sass
@@ -232,8 +232,9 @@ span.date-more
     height: 300px
   .signup
     width: 80px
-    heidht: 50px
     float: right
+    margin-right: 0
+    padding: 5px
   .starred
     background-position: center center
     -webkit-background-size: cover
